# PQSM-RESEARCH

./: BRUTAL_ANALYSIS.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  README_UPDATES.md  TERMINAL_COMMANDS.sh  add_confidence_intervals.py  address_all_concerns.sh  figure_interpretations.md  fix_all_blockers.sh  fix_everything.sh  generate_all_plots.py  make_report_html.py  performance_methods.md  pyproject.toml  requirements.txt  scalability_methodology.md  security_notes.md
.github/workflows/: ci.yml
analysis/: report.html
analysis/analysis/: advanced_report.txt  all_runs_merged.csv  network_sweep_results.csv  performance_summary.csv  scalability_results.csv  summary.json
analysis/analysis/tables/: attacked_summary.csv  by_kem_summary.csv  delivery_by_kem_latency_loss.csv  p50decrypt_by_kem_payload.csv
docs/: DEVELOPMENT_PLANNING.md
paper/: corrected_sections.tex  main.tex  tables.tex
paper/sections/: 01_starting.tex  02_results.tex  03_end.tex  macros.tex
src/: __init__.py  generate_experimental_data.py
src/analysis/: __init__.py  advanced_statistics.py
src/crypto/: __init__.py  advanced_kem.py  kem_types.py
src/hardware/: __init__.py  hardware_tester.py
src/mqtt/: __init__.py  pqsm_broker.py
src/simulation/: __init__.py  network_simulator.py
src/utils/: __init__.py
tests/: conftest.py  test_basic.py  test_kem_types.py
